[gd_scene load_steps=5 format=3 uid="uid://cr8pm42yw74jj"]

[ext_resource type="Script" path="res://scripts/scanner_display.gd" id="1_scanner"]
[ext_resource type="Script" path="res://scripts/HUDElement.gd" id="2_hud_element"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress"]
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.7, 0.9, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(0.3, 0.7, 0.9, 0.8)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ScannerDisplay" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 160.0
grow_horizontal = 0
script = ExtResource("1_scanner")

[node name="HUDElement" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_hud_element")

[node name="Background" type="Panel" parent="HUDElement"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUDElement"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TargetInfo" type="Label" parent="HUDElement/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Target Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScanProgress" type="ProgressBar" parent="HUDElement/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress")
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
show_percentage = false

[node name="RangeIndicator" type="TextureProgressBar" parent="HUDElement/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
fill_mode = 4
nine_patch_stretch = true
